# open-application

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  config.py  dependencies.py  security.py
backend/app/domain/: __init__.py  ai.py  auth.py  crypto.py  entities.py  exceptions.py  repositories.py  value_objects.py
backend/app/infrastructure/: __init__.py  cv_document_rendering.py  cv_text_extraction.py
backend/app/infrastructure/ai/: __init__.py  anthropic_client.py  gemini_client.py  openai_compatible_client.py  prompts.py  resolver.py
backend/app/schemas/: __init__.py  ai_settings.py  application.py  contact.py  cv.py  note.py  task.py
backend/app/services/: __init__.py  ai_settings_service.py  application_service.py  contact_service.py  cv_service.py  cv_tailoring_service.py  note_service.py  task_service.py
backend/scripts/: eval_local_model.py
backend/tests/: fakes.py
backend/tests/integration/: conftest.py  test_ai_settings_api.py  test_api.py  test_auth.py  test_contacts_api.py  test_cv_api.py  test_notes_api.py  test_tasks_api.py
backend/tests/unit/: test_aes_gcm_cipher.py  test_ai_settings_service.py  test_application_service.py  test_contact_service.py  test_cv_base_resume.py  test_cv_repository_replace.py  test_cv_tailoring_service.py  test_note_service.py  test_openai_compatible_client.py  test_supabase_verifier.py  test_task_service.py  test_user_ai_client_resolver.py
supabase/: README.md  (+1 more)
(+119 files in other folders)
